fix: modal window z-index

--- a/client/src/components/ui/ModalFilm/ModalFilm.module.scss
+++ b/client/src/components/ui/ModalFilm/ModalFilm.module.scss
@@ -3,7 +3,7 @@
 .films-container {
   height: 90%;
   border-radius: 10px;
-  margin-top: 5rem;
+  // margin-top: 5rem;
 
   iframe {
     border-radius: 10px;
@@ -55,12 +55,13 @@
 
 .open-modal_films {
   transform: translateY(0px) !important;
+  z-index: 6 !important;
 }
 
 .mоdal-films_close {
   cursor: pointer;
   position: absolute;
-  top: 7.4rem;
+  top: 2.4rem;
   right: 4rem;
   padding: 0.5rem;
   font-size: 1rem;
